# si

./: Cargo.toml  README.md  TESTING.md  cobertura.xml  justfile  tarpaulin-report.html  tarpaulin-report.json  tarpaulin.toml
.github/workflows/: ci.yml
examples/: test_candle.rs
scripts/: README.md  ci-local.sh  get-msrv.sh  test.sh
si_cli/: Cargo.toml
si_cli/src/: main.rs  models.rs
src/: lib.rs  main.rs  models.rs  tryon.rs
tests/: integration_tests.rs  model_manager_tests.rs
