[package]
name = "si"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.1"

[lib]
name = "si"
path = "src/lib.rs"

[[bin]]
name = "si"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.41", features = ["derive"] }
directories = "6.0.0"
env_logger = "0.11.8"
futures-util = "0.3.31"
hf-hub = "0.4.3"
humansize = "2.1.3"
indicatif = "0.18.0"
log = "0.4.27"
reqwest = { version = "0.12.22", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.47.0", features = ["full"] }

# Candle dependencies for virtual try-on with M1 optimization
candle-core = { version = "0.9", features = ["metal"] }
candle-nn = "0.9"
candle-transformers = "0.9"

# Image processing
image = "0.24"
imageproc = "0.23"

# Additional utilities for tensor operations
ndarray = "0.15"
byteorder = "1.5"
rand = "0.8"

[dev-dependencies]
tempfile = "3.8.1"
tokio-test = "0.4.3"
mockall = "0.12.1"
assert_fs = "1.1.1"
predicates = "3.0.4"
