[package]
name = "si_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.41", features = ["derive"] }
directories = "6.0.0"
env_logger = "0.11.8"
futures-util = "0.3.31"
hf-hub = "0.4.3"
humansize = "2.1.3"
indicatif = "0.18.0"
log = { workspace = true }
reqwest = { version = "0.12.22", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.47.0", features = ["full"] }
